@@ -1,7 +1,7 @@
 """Main product initializer
 """
 from Products.Archetypes import atapi
-from Products.CMFCore import utils
+from Products.CMFCore.utils import ContentInit
 from ftw.file import config
 from zope.i18nmessageid import MessageFactory
 
@@ -18,7 +18,7 @@ def initialize(context):
 
     # Now initialize all these content types.
     for atype, constructor in zip(content_types, constructors):
-        utils.ContentInit('%s: %s' % (config.PROJECTNAME, atype.portal_type),
+        ContentInit('%s: %s' % (config.PROJECTNAME, atype.portal_type),
             content_types=(atype, ),
             permission=config.ADD_PERMISSIONS[atype.portal_type],
             extra_constructors=(constructor, ),
