@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1512</version>
+  <version>1513</version>
     <dependencies>
         <dependency>profile-ftw.calendarwidget:default</dependency>
     </dependencies>
