@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_properties" meta_type="Plone Properties Tool">
- <object name="site_properties" meta_type="Plone Property Sheet">
-  <property name="typesUseViewActionInListings" type="lines" purge="False">
-   <element value="File" remove="True"/>
-  </property>
- </object>
-</object>
