@@ -1,15 +1,24 @@
+from ftw.builder.session import BuilderSession
+from ftw.builder.testing import BUILDER_LAYER
+from ftw.builder.testing import set_builder_session_factory
+from ftw.testing import FunctionalSplinterTesting
+from plone.app.testing import IntegrationTesting
+from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
 from plone.app.testing import applyProfile
-from plone.app.testing import PLONE_FIXTURE
-from plone.app.testing import IntegrationTesting
-from plone.app.testing import FunctionalTesting
-from zope.configuration import xmlconfig
 from plone.testing.z2 import installProduct
+from zope.configuration import xmlconfig
+
+
+def functional_session_factory():
+    sess = BuilderSession()
+    sess.auto_commit = True
+    return sess
 
 
 class FtwFileLayer(PloneSandboxLayer):
 
-    defaultBases = (PLONE_FIXTURE, )
+    defaultBases = (PLONE_FIXTURE, BUILDER_LAYER)
 
     def setUpZope(self, app, configurationContext):
         # Load ZCML
@@ -26,5 +35,8 @@ class FtwFileLayer(PloneSandboxLayer):
 FTW_FILE_FIXTURE = FtwFileLayer()
 FTW_FILE_INTEGRATION_TESTING = IntegrationTesting(
     bases=(FTW_FILE_FIXTURE, ), name="ftw.file:Integration")
-FTW_FILE_FUNCTIONAL_TESTING = FunctionalTesting(
-    bases=(FTW_FILE_FIXTURE, ), name="ftw.file:Functional")
+
+FTW_FILE_FUNCTIONAL_TESTING = FunctionalSplinterTesting(
+    bases=(FTW_FILE_FIXTURE,
+           set_builder_session_factory(functional_session_factory)),
+    name="ftw.file:Functional")
