@@ -3,3 +3,4 @@ extends = http://plonesource.org/sources.cfg
 extensions = mr.developer
 
 auto-checkout =
+    ftw.builder
